# cb_base_navigation

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  global_planner_plugins.xml  local_planner_plugins.xml  package.xml  rosdoc.yaml
example_launch/: global_planner.launch  local_planner.launch
example_parameters/: global_costmap.yaml  local_costmap.yaml  local_planner.yaml
examples/: move
global_planner_plugins/a_star_planner/: a_star_planner.cpp  a_star_planner.h  a_star_planner_gpp.cpp  a_star_planner_gpp.h
include/cb_base_navigation/global_planner/: constraint_evaluator.h  exprtk.h  global_planner_interface.h  global_planner_plugin.h  visualization.h
include/cb_base_navigation/local_planner/: local_planner_interface.h  visualization.h
launch/: global_planner.launch  local_planner.launch  start.launch
local_planner_plugins/amigo_local_planner/: amigo_local_planner.cpp  amigo_local_planner.h
params/: global_costmap.yaml  global_planner.yaml  local_costmap.yaml  local_costmap_params.yaml  local_planner.yaml  local_planner_params.yaml
scripts/: fast_simulator_person  move
src/: global_planner.cpp  local_planner.cpp
src/global_planner/: constraint_evaluator.cpp  global_planner_interface.cpp  visualization.cpp
src/local_planner/: local_planner_interface.cpp  visualization.cpp
