<?xml version="1.0"?>
<package>
  <name>cb_base_navigation</name>
  <version>0.0.0</version>
  <description>Alternative to move_base (navigation stack ROS); a more simplistic base bavigation which works with the Costmap 2D ROS world model. In can handle goal position constraints and the goal orientation constraint is set up in a different way (see cb_base_navigation_msgs_srvs package).</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cb_planner_msgs_srvs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>code_profiler</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>ed_msgs</build_depend>

  <run_depend>cb_planner_msgs_srvs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>code_profiler</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>ed_msgs</run_depend>

  <export>
    <cb_base_navigation plugin="${prefix}/global_planner_plugins.xml"/>
  </export>
</package>
