<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cb_base_navigation</name>
  <version>0.0.0</version>
  <description>Alternative to move_base (navigation stack ROS); a more simplistic base bavigation which works with the Costmap 2D ROS world model. In can handle goal position constraints and the goal orientation constraint is set up in a different way (see cb_base_navigation_msgs_srvs package).</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cb_base_navigation_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>code_profiler</depend>
  <depend>base_local_planner</depend>
  <depend>ed_msgs</depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <cb_base_navigation plugin="${prefix}/global_planner_plugins.xml"/>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
